# dotfiles

./: .gitignore  README.md
bash/: .bash_profile  .bashrc
bash/.bashrc.d/: default_editor.sh  env.sh  powerline.sh
clangd/.config/clangd/: config.yaml
foot/.config/foot/: foot.ini
neovim/.config/nvim/: init.lua  lazy-lock.json
neovim/.config/nvim/lua/: config.lua
neovim/.config/nvim/lua/lsp/: clangd.lua  init.lua
neovim/.config/nvim/lua/plugin_mgr/: lazy.lua
neovim/.config/nvim/lua/plugins/: autosave.lua  lsp.lua  stcursorword.lua  telescope.lua  vscode.lua
src/: CMakeLists.txt  build_install_and_clean.sh  compile_commands.json  conanfile.txt  mode_watcher.cpp  print_error.hpp  requirements.txt  scratchpad_watcher.cpp
src/conan_profiles/: profile
src/sway_ipc/: sized_buffer.cpp  sized_buffer.hpp  sway_ipc.cpp  sway_ipc.hpp
src/sway_ipc/events/: event_type.cpp  event_type.hpp
sway/.config/sway/config.d/: background.conf  bindings.conf  borders.conf  monitors.conf  noisetorch.conf  pavucontrole_rule.conf  startup.conf  switch_language.conf
tms/.config/tms/: config.toml
tmux/: .tmux.conf
waybar/.config/waybar/: config.jsonc  style.css
